Refactoring; Next step walk-forward